<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center"

    tools:context=".AddWorkoutActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/add_workout" />

    <EditText
        android:id="@+id/workoutNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/workout_name" />

    <EditText
        android:id="@+id/workoutDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/description_of_the_workout" />

    <EditText
        android:id="@+id/workoutDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/training_date" />

    <Button
        android:id="@+id/saveWorkoutButton"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/save_workout" />

</LinearLayout>
